# splash

./: .gitignore  README.md  pyproject.toml
splash/: __init__.py  adapters.py  curves.py  diff_scion.py  dynamic.py  geometry.py  layers.py  orchestrate.py  reports.py  robustness.py  roi_miner.py  sala.py  test_dynamic.py  test_geometry.py  test_layers.py  test_llms.py  test_orchestrate.py  test_reports.py  test_robustness.py  test_tiling.py  tiling.py  train_dynamic.py  types.py  viz.py
splash/calibrate/: __init__.py  profile.py  sweep.py  test_calibrate.py
splash/control/: __init__.py  actuator.py  controller.py  observer.py  policy.py  test_control_controller.py  test_control_policy.py  types.py  verifier.py
splash/dashboard/: __init__.py  adapters.py  dash.py  test_dash.py
splash/scg/: curvature.py  dynamics.py  invariants.py  knobs.py  ops.py  phase_frame.py  projection.py  test_phase_frame.py
